--- a/public/styles/_portfolio.scss
+++ b/public/styles/_portfolio.scss
@@ -41,6 +41,10 @@
   }
 }
 
+#ct {
+  background-image: url("/images/ct-tile.jpg");
+}
+
 #travel-blog {
   background-image: url("/images/travel-blog-tile.jpg");
 }
@@ -69,10 +73,18 @@
   background-image: url("/images/hopelands-tile.jpg");
 }
 
+#theyer {
+  background-image: url("/images/theyer-tile.jpg");
+}
+
 #whitestuff {
   background-image: url("/images/whitestuff-tile.jpg");
 }
 
 #ppp {
   background-image: url("/images/ppp-tile.jpg");
+}
+
+#ob {
+  background-image: url("/images/ob-tile.jpg");
 }
